manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-server
  labels:
    app: rest-server
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: rest-server
  template:
    metadata:
      labels:
        app: rest-server
    spec:
      containers:
      - name: rest-container
        image: pollas1936/rest-server:latest 
        ports:
        - containerPort: 8080
