manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-service
  labels:
    app: rest-server
spec:
  selector:
    app: rest-server
  ports:
  - protocol: TCP
    port: 8080       # Exposed port
    targetPort: 8080  # app's port
  type: ClusterIP
